# aoc2025

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
01/: 01.py
year_2025/day_01/: README.md  solution.py
year_2025/day_03/: README.md  solution.py
year_2025/day_04/: README.md  solution.py
year_2025/day_05/: solution.py
year_2025/day_08/: README.md
