[project]
name = "aoc2025"
version = "0.1.0"
description = "advent of code 2025 solutions and problem breakdowns"
authors = [
    {name = "mei",email = "mail@meihapps.gay"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
